[project]
name = "orkoprox"
version = "0.1.2"
description = "OpenAI-compatible, self-hosted LLM gateway — secure by default, one container."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "gateway", "proxy", "openai", "self-hosted", "fastapi"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "httpx>=0.28.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "python-multipart>=0.0.9",
  "redis>=6.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.12.12",
]

# Mirror of optional-dependencies.dev for PEP 735 / uv tooling.
[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.12.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
